<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="cityNotFound">city not found</string>
    <string name="defaultCityName">Marrakech</string>
    <string name="defaultWeatherDescription">Sunny</string>
    <string name="defaultDegree">25</string>
    <string name="trashDescription">trash</string>
    <string name="titleAddCity">Add  new city</string>
    <string name="cityNameHint">City name</string>
    <string name="humidity">Humidity : </string>
    <string name="wind">Wind Speed :</string>
    <string name="windSpeed">20 m/s</string>





</resources>
