<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cv_weather"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="@color/white">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/skyColor"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/lL_weather_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_cityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/defaultCityName" />
            <ImageView
                android:id="@+id/iv_weather_icon"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/sw_01" />
            <TextView
                android:id="@+id/tv_weatherDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/defaultWeatherDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_weather_degree"
                    android:layout_width="wrap_content"
                    android:paddingLeft="30dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:text="@string/defaultDegree" />
                <ImageView
                    android:id="@+id/iv_celsius"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="@dimen/cardview_text_margin"
                    android:src="@drawable/celsius" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="end">
            <ImageView
                android:id="@+id/iv_trash"
                android:layout_width="35dp"
                android:layout_height="15dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/trashDescription"
                android:src="@drawable/trash" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>