<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center|center_vertical"
    android:layout_gravity="center_vertical"
    android:clickable="true"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        card_view:cardBackgroundColor="@color/skyColor">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:id="@+id/tv_detail_cityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="10dp"
                android:text="Marrakech" />
            <ImageView
                android:id="@+id/iv_detail_weather_icon"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/sw_01" />
            <TextView
                android:id="@+id/tv_detail_weatherDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="Sunny" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_detail_weather_degree"
                    android:layout_width="wrap_content"
                    android:paddingLeft="30dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:text="20,5" />
                <ImageView
                    android:id="@+id/iv_detail_celsius"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="@dimen/cardview_text_margin"
                    android:src="@drawable/celsius" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"

                android:gravity="center">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/humidity" />
                <TextView
                    android:id="@+id/tv_detail_humidity"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:text="@string/defaultDegree" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:gravity="center">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/wind" />
                <TextView
                    android:id="@+id/tv_detail_windSpeed"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:text="@string/windSpeed" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:gravity="center">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="Pressure : " />
                <TextView
                    android:id="@+id/tv_detail_pressure"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:text="@string/defaultDegree" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>